# speak2type

./: .gitignore  README.md  UPSTREAM.md  policy-exceptions.md  pyproject.toml
.aisteering/: ARCHITECTURE.md  PRODUCT.md  TECHNOLOGY.md  initial-plan.md  policy-exceptions.md
.aisteering/scratchpads/: 2026-01-26-init.md  2026-01-26-phase1.md  2026-01-27-audio-capture.md  2026-01-27-mcp-model-name.md  2026-01-28-code-review.md  2026-02-07-debian-scaffold.md  2026-02-07-installer-options.md  2026-02-11-thorough-review.md  2026-02-19-issue7-spaces-fix.md
.aisteering/summaries/: 2026-01-26-init.md  2026-01-27-audio-capture-debugging.md  2026-01-27-mcp-model-name.md  2026-01-28-code-review.md  2026-02-07-debian-scaffold.md  2026-02-07-installer-options.md  2026-02-08-engine-backend-split.md  2026-02-10-bug-audit-fixes.md  2026-02-10-provider-shim-workaround.md  2026-02-11-thorough-review.md  2026-02-19-issue7-spaces-fix.md
.pybuild/cpython3_3.13_speak2type/: speak2type-0.1.0-py3-none-any.whl
data/: org.freedesktop.ibus.engine.stt.gschema.xml.in
debian/: README.build.md  control  copyright  debhelper-build-stamp  files  ibus-setup-speak2type.desktop  rules  speak2type.postinst.debhelper  speak2type.prerm.debhelper  speak2type.substvars
debian/speak2type/DEBIAN/: control  md5sums  postinst  prerm
debian/speak2type/usr/libexec/: ibus-engine-speak2type  ibus-setup-speak2type
debian/speak2type/usr/share/ibus/component/: speak2type.xml
scripts/: benchmark.py  dev-install.sh  ibus-engine-speak2type
server/: main.py  openapi.yaml
src/speak2type/: __init__.py  __main__.py  audio_capture.py  backend_manager.py  engine.py  global_hotkey.py  preferences.py  types.py  worker.py
src/speak2type/backends/: __init__.py  base.py  http_adapter.py  parakeet_adapter.py  vosk_adapter.py  whisper_adapter.py
src/speak2type/model_managers/: __init__.py  parakeet.py
src/upstream/: main.py  meson.build  sttconfigdialog.py  sttconfigdialog.ui  sttgstfactory.py  sttgstwhisper.py  sttlocalerow.py  sttmodelchooserdialog.py  sttmodelrow.py  sttvoskmodelmanagers.py  sttwhispermodel.py  sttwhispermodelmanagers.py  sttwordstodigits.py
tests/: __init__.py  conftest.py  test_backend_manager.py  test_backends.py  test_global_hotkey.py  test_model_managers.py  test_types.py  test_unfocused_typing.py
