[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speak2type"
version = "0.1.0"
description = "Speech-to-text IBus engine for Linux desktops"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [
    {name = "speak2type contributors"},
]
keywords = ["speech-to-text", "stt", "ibus", "dictation", "voice-input", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: Gnome",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "PyGObject>=3.42.0",
    # Note: IBus, GStreamer, GTK4 are system dependencies via GI
]

[project.optional-dependencies]
vosk = [
    # gst-vosk is a system dependency (GStreamer plugin)
]
whisper = [
    "pywhispercpp>=1.3.0",
    "numpy>=1.24.0",
]
parakeet = [
    "onnx-asr>=0.7.0",
    "onnxruntime>=1.16.0",
    "numpy>=1.24.0",
]
http = [
    "httpx>=0.25.0",
]
all = [
    "speak2type[whisper,parakeet,http]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.82.0",
    "schemathesis>=3.20.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/speak2type/speak2type"
Repository = "https://github.com/speak2type/speak2type"
Issues = "https://github.com/speak2type/speak2type/issues"

[project.scripts]
speak2type-benchmark = "speak2type.scripts.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["speak2type*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["speak2type"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
